<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/dashboard_title">
        <Preference
            android:key="hermes_health_check"
            android:title="@string/health_check_title"
            android:summary="@string/health_check_checking"
            android:selectable="true" />
        <Preference
            android:key="hermes_dashboard_gateway"
            android:title="@string/dashboard_gateway_title"
            android:selectable="false" />
        <Preference
            android:key="hermes_dashboard_llm"
            android:title="@string/dashboard_llm_title"
            android:selectable="false" />
        <Preference
            android:key="hermes_dashboard_im"
            android:title="@string/dashboard_im_title"
            android:selectable="false" />
        <Preference
            android:key="hermes_conversation_history"
            android:title="@string/conversation_title"
            android:summary="@string/conversation_empty" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="hermes_validation_category"
        android:title="@string/validation_category_title">
        <Preference
            android:key="validation_api_key"
            android:title="@string/validation_api_key_title"
            android:selectable="true" />
        <Preference
            android:key="validation_gateway"
            android:title="@string/validation_gateway_title"
            android:selectable="true" />
        <Preference
            android:key="validation_im"
            android:title="@string/validation_im_title"
            android:selectable="true" />
        <Preference
            android:key="validation_system_prompt"
            android:title="@string/validation_system_prompt_title"
            android:selectable="true" />
        <Preference
            android:key="error_recovery_fix"
            android:title="@string/error_recovery_title"
            android:summary="@string/error_recovery_checking"
            android:selectable="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/usage_category_title">
        <Preference
            android:key="usage_total_uptime"
            android:title="@string/usage_total_uptime_title"
            android:selectable="false" />
        <Preference
            android:key="usage_sessions"
            android:title="@string/usage_sessions_title"
            android:selectable="false" />
        <Preference
            android:key="usage_estimated_cost"
            android:title="@string/usage_estimated_cost_title"
            android:selectable="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/profile_category_title">
        <Preference
            android:key="hermes_profile_current"
            android:title="@string/profile_current_title"
            android:selectable="false" />
        <Preference
            android:key="hermes_profile_save"
            android:title="@string/profile_save_title"
            android:summary="@string/profile_save_summary" />
        <Preference
            android:key="hermes_profile_switch"
            android:title="@string/profile_switch_title"
            android:summary="@string/profile_switch_summary" />
        <Preference
            android:key="hermes_profile_delete"
            android:title="@string/profile_delete_title"
            android:summary="@string/profile_delete_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_backup">
        <Preference
            android:key="hermes_config_export"
            android:title="@string/config_export_title"
            android:summary="@string/config_export_summary" />
        <Preference
            android:key="hermes_config_import"
            android:title="@string/config_import_title"
            android:summary="@string/config_import_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/hermes_cat_general">
        <Preference
            android:key="hermes_templates"
            android:title="@string/template_menu_title"
            android:summary="@string/template_menu_summary" />

        <Preference
            android:key="hermes_llm_config"
            android:title="@string/hermes_llm_config_title"
            android:summary="@string/hermes_llm_config_summary"
            android:icon="@drawable/ic_settings" />

        <Preference
            android:key="hermes_feishu_setup"
            android:title="@string/hermes_feishu_setup_title"
            android:summary="@string/hermes_feishu_setup_summary" />

        <Preference
            android:key="hermes_telegram_setup"
            android:title="@string/hermes_telegram_setup_title"
            android:summary="@string/hermes_telegram_setup_summary" />

        <Preference
            android:key="hermes_discord_setup"
            android:title="@string/hermes_discord_setup_title"
            android:summary="@string/hermes_discord_setup_summary" />

        <Preference
            android:key="hermes_whatsapp_setup"
            android:title="@string/whatsapp_setup_title"
            android:summary="@string/whatsapp_setup_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/hermes_cat_gateway">

        <SwitchPreferenceCompat
            android:key="hermes_auto_start_gateway"
            android:title="@string/gateway_auto_start_title"
            android:summary="@string/gateway_auto_start_summary"
            android:defaultValue="false" />

        <Preference
            android:key="hermes_gateway_control"
            android:title="@string/hermes_gateway_control_title"
            android:summary="@string/hermes_gateway_control_summary" />

        <EditTextPreference
            android:key="hermes_command_timeout"
            android:title="@string/gateway_command_timeout_title"
            android:summary="@string/gateway_command_timeout_summary"
            android:inputType="number"
            android:defaultValue="120" />

        <EditTextPreference
            android:key="hermes_restart_delay"
            android:title="@string/gateway_restart_delay_title"
            android:summary="@string/gateway_restart_delay_summary"
            android:inputType="number"
            android:defaultValue="30" />

        <SwitchPreferenceCompat
            android:key="hermes_gateway_auto_restart"
            android:title="@string/gateway_auto_restart_title"
            android:summary="@string/gateway_auto_restart_summary"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="hermes_gateway_max_restarts"
            android:title="@string/gateway_max_restarts_title"
            android:summary="@string/gateway_max_restarts_summary"
            android:inputType="number"
            android:defaultValue="3" />

        <SwitchPreferenceCompat
            android:key="hermes_gateway_notif_sound"
            android:title="@string/gateway_notif_sound_title"
            android:summary="@string/gateway_notif_sound_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="hermes_gateway_notif_vibrate"
            android:title="@string/gateway_notif_vibrate_title"
            android:summary="@string/gateway_notif_vibrate_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/hermes_cat_advanced">

        <Preference
            android:key="hermes_agent_settings"
            android:title="@string/agent_settings_title"
            android:summary="@string/agent_settings_summary" />

        <Preference
            android:key="hermes_mcp_settings"
            android:title="@string/mcp_settings_title"
            android:summary="@string/mcp_settings_summary" />

        <Preference
            android:key="hermes_prompt_chains"
            android:title="@string/chains_title"
            android:summary="@string/chains_summary" />

        <Preference
            android:key="hermes_gateway_diagnostic"
            android:title="@string/gateway_diagnostic_title"
            android:summary="@string/gateway_diagnostic_summary" />

        <Preference
            android:key="hermes_check_update"
            android:title="@string/hermes_check_update_title"
            android:summary="@string/hermes_check_update_summary" />

        <Preference
            android:key="hermes_gateway_log"
            android:title="@string/gateway_log_title"
            android:summary="@string/hermes_gateway_log_summary" />

        <Preference
            android:key="hermes_help_faq"
            android:title="@string/hermes_help_faq_title"
            android:summary="@string/hermes_help_faq_summary" />

        <Preference
            android:key="hermes_reset_config"
            android:title="@string/hermes_reset_title"
            android:summary="@string/hermes_reset_summary" />

        <Preference
            android:key="hermes_export_config"
            android:title="@string/hermes_export_title"
            android:summary="@string/hermes_export_summary" />

        <Preference
            android:key="hermes_import_config"
            android:title="@string/hermes_import_title"
            android:summary="@string/hermes_import_summary" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/llm_category_share">
        <Preference
            android:key="config_export"
            android:title="@string/config_export_title"
            android:summary="@string/config_export_summary" />
        <Preference
            android:key="config_import"
            android:title="@string/config_import_title"
            android:summary="@string/config_import_summary" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/category_help">
        <Preference
            android:key="tutorial_reset"
            android:title="@string/tutorial_reset_title"
            android:summary="@string/tutorial_reset_summary" />
    </PreferenceCategory>

</PreferenceScreen>
