<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="llm_provider"
        android:title="@string/llm_provider_title"
        android:summary="@string/llm_provider_summary"
        android:entries="@array/llm_provider_names"
        android:entryValues="@array/llm_provider_values"
        android:defaultValue="openai" />

    <EditTextPreference
        android:key="llm_api_key"
        android:title="@string/llm_api_key_title"
        android:summary="@string/llm_api_key_summary" />

    <ListPreference
        android:key="llm_model"
        android:title="@string/llm_model_title"
        android:summary="@string/llm_model_summary"
        android:entries="@array/llm_models_openai"
        android:entryValues="@array/llm_models_openai"
        android:defaultValue="gpt-4o" />

    <EditTextPreference
        android:key="llm_custom_model"
        android:title="@string/llm_custom_model_title"
        android:summary="@string/llm_custom_model_summary"
        android:visible="false" />

    <EditTextPreference
        android:key="llm_base_url"
        android:title="@string/llm_base_url_title"
        android:summary="@string/llm_base_url_summary"
        android:inputType="textUri" />

    <Preference
        android:key="llm_test_connection"
        android:title="@string/llm_test_connection_title"
        android:summary="@string/llm_test_connection_summary"
        android:selectable="true" />

</PreferenceScreen>
